[gd_scene load_steps=22 format=2]

[ext_resource path="res://fonts/Ubuntu40.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Ubuntu24.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/TotalParticles2D.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/GlobeOneBar.gd" type="Script" id=5]
[ext_resource path="res://scripts/PauseButtonOneBar.gd" type="Script" id=6]
[ext_resource path="res://sprites/Gas/gas1.png" type="Texture" id=7]
[ext_resource path="res://sprites/200px-Circle_-_black_simple.svg.png" type="Texture" id=8]
[ext_resource path="res://scenes/TileGlobeMap.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Button.gd" type="Script" id=10]
[ext_resource path="res://sprites/13920061813626.png" type="Texture" id=11]
[ext_resource path="res://fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UITheme.tres" type="Theme" id=13]
[ext_resource path="res://sprites/UI/blankHover.png" type="Texture" id=14]
[ext_resource path="res://sprites/UI/blank.png" type="Texture" id=15]
[ext_resource path="res://scenes/PopupGraph2.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/PopupGraph.tscn" type="PackedScene" id=17]


[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.406897, 1 )
colors = PoolColorArray( 0.409668, 0.409668, 0.409668, 1, 0.65098, 0.65098, 0.65098, 0.862745, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.706897, 1 )
colors = PoolColorArray( 0.278431, 1, 0, 1, 0.278431, 1, 0, 0.721569, 0.278431, 1, 0, 0 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 1
outline_color = Color( 0.627451, 0.627451, 0.627451, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 12 )

[node name="OneBarMode" type="Node2D"]

[node name="Globe" type="Sprite" parent="."]
visible = false
position = Vector2( 842.838, 445.932 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Globe"]

[node name="TileMap" parent="." instance=ExtResource( 9 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ForcingBox2" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 450.0
margin_top = 65.0
margin_right = 884.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AerRect" type="ColorRect" parent="CanvasLayer/ForcingBox2"]
margin_right = 434.0
hint_tooltip = "Aerosol radiative forcing = -1.1 W/m2"
mouse_filter = 1
color = Color( 0, 0.847059, 0.933333, 1 )

[node name="ForcingBox" type="VBoxContainer" parent="CanvasLayer"]
margin_top = 65.0
margin_right = 450.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CO2Rect" type="ColorRect" parent="CanvasLayer/ForcingBox"]
margin_right = 450.0
hint_tooltip = "Carbon dioxide forcing = 2.2 W/m2"
mouse_filter = 1
color = Color( 0, 0, 0, 0.784314 )

[node name="CH4Rect" type="ColorRect" parent="CanvasLayer/ForcingBox"]
margin_top = 4.0
margin_right = 450.0
margin_bottom = 4.0
grow_vertical = 0
hint_tooltip = "Methane forcing = 0.54 W/m2"
mouse_filter = 1
color = Color( 0.611765, 0.917647, 0.462745, 1 )

[node name="N2ORect" type="ColorRect" parent="CanvasLayer/ForcingBox"]
visible = false
margin_top = 8.0
margin_right = 590.0
margin_bottom = 8.0
hint_tooltip = "Nitrous oxide forcing = 0.2 W/m2"
mouse_filter = 1
color = Color( 1, 0, 0, 0.784314 )

[node name="Node2D" type="Node2D" parent="CanvasLayer"]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Node2D"]
margin_right = 1024.0
margin_bottom = 65.0
mouse_filter = 1
color = Color( 0.0823529, 0.0823529, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Node2D"]
margin_left = 827.0
margin_top = 104.0
margin_right = 1011.0
margin_bottom = 600.0
mouse_filter = 1
color = Color( 1, 1, 1, 0.54902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/Node2D"]
margin_left = 827.0
margin_top = 61.0
margin_right = 1021.0
margin_bottom = 206.0
mouse_filter = 1
color = Color( 0.0823529, 0.0823529, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer/Node2D"]
margin_left = 999.0
margin_right = 1024.0
margin_bottom = 601.0
mouse_filter = 1
color = Color( 0.0823529, 0.0823529, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer/Node2D"]
margin_left = 383.0
margin_top = 545.0
margin_right = 754.0
margin_bottom = 600.0
mouse_filter = 1
color = Color( 0.0823529, 0.0823529, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupGraph2" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="PopupGraph" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="TempRect" type="ColorRect" parent="CanvasLayer"]
anchor_bottom = 40.0
margin_left = 921.0
margin_top = 450.0
margin_right = 961.0
margin_bottom = -23431.0
mouse_filter = 1
color = Color( 0.886275, 0.32549, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TTLabel" type="Label" parent="CanvasLayer/TempRect"]
margin_left = -279.0
margin_top = -23.0
margin_right = -12.0
margin_bottom = 80.0
hint_tooltip = "Warming since preindustrial"
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.886275, 0.32549, 0.141176, 1 )
text = "T = 1.0 K 
Td = 0.3 K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighLine" type="Line2D" parent="CanvasLayer/TempRect"]
position = Vector2( 20, 0 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.741176, 0.121569, 0.0509804, 1 )

[node name="LowLine" type="Line2D" parent="CanvasLayer/TempRect"]
position = Vector2( 20, 0 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.988235, 0.698039, 0.196078, 1 )

[node name="10 C" type="Line2D" parent="CanvasLayer"]
position = Vector2( 921, 450 )
points = PoolVector2Array( -20, 0, 60, 0 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="10C label" type="Label" parent="CanvasLayer/10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = -12.0
margin_right = -31.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 1.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15C label" type="Label" parent="CanvasLayer/10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = -62.0
margin_right = 8.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 1.5 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="20C label" type="Label" parent="CanvasLayer/10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = -112.0
margin_right = -31.0
margin_bottom = -84.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 2.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="25C label" type="Label" parent="CanvasLayer/10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = -162.0
margin_right = -31.0
margin_bottom = -134.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 2.5 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="30C label" type="Label" parent="CanvasLayer/10 C"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = -212.0
margin_right = -31.0
margin_bottom = -184.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 3.0 C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="15 C" type="Line2D" parent="CanvasLayer"]
position = Vector2( 921, 450 )
points = PoolVector2Array( -20, -50, 60, -50 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="20 C" type="Line2D" parent="CanvasLayer"]
position = Vector2( 921, 450 )
points = PoolVector2Array( -20, -100, 60, -100 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="25 C" type="Line2D" parent="CanvasLayer"]
position = Vector2( 921, 450 )
points = PoolVector2Array( -20, -150, 60, -150 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="30 C" type="Line2D" parent="CanvasLayer"]
position = Vector2( 921, 450 )
points = PoolVector2Array( -20, -200, 60, -200 )
width = 6.0
default_color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.886275, 0.32549, 0.141176, 1 )
position = Vector2( 941, 550 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="TotalParticles2D" type="CPUParticles2D" parent="CanvasLayer"]
pause_mode = 1
position = Vector2( 150, 304.03 )
lifetime = 1.65
texture = ExtResource( 7 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 130.0
angular_velocity = 100.0
angular_velocity_random = 0.34
scale_amount = 0.1
scale_amount_random = 0.2
color_ramp = SubResource( 1 )
script = ExtResource( 3 )

[node name="CH4Particles2D" type="CPUParticles2D" parent="CanvasLayer/TotalParticles2D"]
position = Vector2( 0, -2.687 )
amount = 5
lifetime = 2.5
texture = ExtResource( 7 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
angular_velocity = 100.0
angular_velocity_random = 0.34
scale_amount = 0.06
scale_amount_random = 0.05
color_ramp = SubResource( 2 )

[node name="Sliders" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLine" type="Line2D" parent="CanvasLayer/Sliders"]
position = Vector2( 0, -48 )
points = PoolVector2Array( 100, 426, 200, 426 )
width = 2.0
default_color = Color( 0.6, 0.596078, 0.596078, 1 )

[node name="CurrentLabel" type="Label" parent="CanvasLayer/Sliders/CurrentLine"]
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 398.0
margin_right = 103.0
margin_bottom = 457.0
hint_tooltip = "Drag to change emissions"
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Emissions 
  in 2020"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeroLine" type="Line2D" parent="CanvasLayer/Sliders"]
points = PoolVector2Array( 80, 540, 220, 540 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="ZeroLabel" type="Label" parent="CanvasLayer/Sliders/ZeroLine"]
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 525.0
margin_right = 100.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalSlider" type="VSlider" parent="CanvasLayer/Sliders"]
pause_mode = 2
margin_left = 125.0
margin_top = 300.0
margin_right = 175.0
margin_bottom = 550.0
hint_tooltip = "Carbon dioxide"
theme = ExtResource( 13 )
custom_icons/grabber_disabled = ExtResource( 11 )
custom_icons/grabber_highlight = ExtResource( 11 )
custom_icons/grabber = ExtResource( 11 )
value = 70.0
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalLabel" type="Button" parent="CanvasLayer/Sliders/TotalSlider"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -9.99998
margin_right = 52.0
margin_bottom = 40.0
hint_tooltip = "CO2, CH4, N2O, SL"
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total Emissions"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Sliders"]
margin_right = 1024.0
margin_bottom = 59.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearTLabel" type="Label" parent="CanvasLayer/Sliders/HBoxContainer"]
margin_right = 157.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "  Year: 2020  
  F = 2.2 W/m2"

[node name="CO2TLabel" type="Label" parent="CanvasLayer/Sliders/HBoxContainer"]
margin_left = 181.0
margin_right = 388.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CO2 = 415 ppm  
FCO2 = 2.10 W/m2"

[node name="CH4TLabel" type="Label" parent="CanvasLayer/Sliders/HBoxContainer"]
margin_left = 412.0
margin_right = 617.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.541176, 0.894118, 0.403922, 1 )
text = "CH4 = 2.20 ppm  
FCH4 = 0.54 W/m2"

[node name="N2OTLabel" type="Label" parent="CanvasLayer/Sliders/HBoxContainer"]
visible = false
margin_left = 477.0
margin_top = 2.0
margin_right = 649.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "N2O = 0.40 ppm  
FN2O = 0.20 W/m2"

[node name="AerTLabel" type="Label" parent="CanvasLayer/Sliders/HBoxContainer"]
margin_left = 641.0
margin_right = 866.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.847059, 0.933333, 1 )
text = "Short-lived pollution
= -1.10 W/m2"

[node name="PauseButton" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 835.0
margin_top = 160.0
margin_right = 1005.0
margin_bottom = 194.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseButton"]
margin_top = -0.218201
margin_right = 170.0
margin_bottom = 32.7818
custom_fonts/font = ExtResource( 2 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="CanvasLayer/PauseButton"]
pause_mode = 2
margin_left = -439.0
margin_top = 398.0
margin_right = -269.0
margin_bottom = 432.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseButton/BackButton"]
margin_top = 0.218231
margin_right = 170.0
margin_bottom = 33.2182
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 572.0
margin_top = 557.0
margin_right = 742.0
margin_bottom = 591.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ResetButton"]
margin_right = 170.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Reset"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphButton" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 835.0
margin_top = 70.0
margin_right = 1005.0
margin_bottom = 104.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GraphButton"]
margin_top = -0.346527
margin_right = 170.0
margin_bottom = 32.6535
custom_fonts/font = ExtResource( 2 )
text = "Graph T"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphButton2" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 835.0
margin_top = 115.0
margin_right = 1005.0
margin_bottom = 149.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GraphButton2"]
margin_top = 0.496975
margin_right = 170.0
margin_bottom = 33.497
custom_fonts/font = ExtResource( 2 )
text = "Graph F"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Control" parent="CanvasLayer"]
visible = false
margin_left = 18.0
margin_top = 125.0
margin_right = 18.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blank" type="Sprite" parent="CanvasLayer/HowToPlay"]
self_modulate = Color( 0.54902, 0.545098, 0.682353, 1 )
scale = Vector2( 1.17757, 1.16153 )
texture = ExtResource( 15 )
centered = false

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay"]
margin_left = 85.0
margin_top = 32.0
margin_right = 706.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 4 )
text = "Welcome to Simple Mode, with only one slider for all pollutants.
 All emissions are scaled relative to today's values"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/HowToPlay"]
pause_mode = 2
margin_left = 309.0
margin_top = 221.0
margin_right = 479.0
margin_bottom = 271.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HowToPlay/TextureButton"]
pause_mode = 2
margin_left = 2.0
margin_top = -1.0
margin_right = 167.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Begin"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="CanvasLayer/Sliders/TotalSlider" to="CanvasLayer/TotalParticles2D" method="_on_TotalSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="CanvasLayer/PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton/BackButton" to="CanvasLayer/ResetButton" method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="CanvasLayer/ResetButton" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/GraphButton" to="CanvasLayer/ResetButton" method="_on_GraphButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GraphButton2" to="CanvasLayer/ResetButton" method="_on_GraphButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/HowToPlay/TextureButton" to="CanvasLayer/PauseButton" method="_on_PauseButton_pressed"]
